# movie-file-fixer

./: .gitignore  .travis.yml  File_Remover.py  Folderizer.py  Formatter.py  Helper_Functions.py  Movie_File_Fixer.py  Poster_Finder.py  README.md  README.txt  contents_checker.py  contents_creator.py  contributors.txt  file_remover.py  film_sizes.csv  film_sizes.json  folderizer.py  formatter.py  movie_file_fixer.py  poster_finder.py  release.sh  release_win.bat  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup.cfg  setup.py  subtitle_finder.py  test_formatter.py  test_search_titles.py  test_size.py  tox.ini  transcode_files.py
.github/workflows/: deploy.yml  validations.yml
archive/: find_torrent.py  old_formatter.py  test_selenium.py  test_size.py
archive/old_test/: README.txt  old_test_file_remover.py  old_test_formatter.py  old_test_poster_finder.py  titles.txt
archive/sandbox/: file_remover_timing.py  import_imdb.py  json_test.py  test_json.py  test_regex.py
archive/test/: cleanup.py  run_tests.sh  test_search_titles.py
backup/: contents.json
data/: CreateDummyData.py  Helper_Functions.py  bad_titles.txt  cant_fix.txt  good_titles.txt  test_createdummydata.py
data/imdb/: 650 Best Films- w-Few Ratings-.csv  All of these Films are Worth Seeing- 1400 Titles.csv  Amazon Prime Instant Video.csv
dictionaries/: dictionary.csv  dictionary.txt
sandbox/: file_remover_test.py  import_imdb.py  json_test.py  test_json.py  test_regex.py
src/movie_file_fixer/: __init__.py  __main__.py  file_remover.py  folderizer.py  formatter.py  movie_file_fixer.py  (+2 more)
test/: cleanup.py  data.json  print_titles.py  test_createdummydata.py  test_file_remover.py  test_formatter.py  test_poster_finder.py  test_regex.py  test_search_titles.py  titles.txt
(+35 files in other folders)
