# -*- coding: utf-8 -*-
[metadata]
name = movie-file-fixer
version = 0.3.0
description = Given a directory of poorly formatted movie files, `movie-file-fixer` will create a beautifully formatted directory of films folders, complete with posters, subtitles, and IMDb metadata.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = movies television backups multimedia omdb api imdb metadata
maintainer = Blair Gemmer
author = Blair Gemmer
author_email = blair@intelligen.technology
maintainer-email = blair@intelligen.technology
url = https://github.com/blairg23/movie-file-fixer
project_urls =
    Source=https://github.com/blairg23/movie-file-fixer
    Tracker=https://github.com/blairg23/movie-file-fixer/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
    omdbpy
    requests

[options.packages.find]
where = src

;[options.entry_points]
;console_scripts =

[options.extras_require]
testing =
    faker
    pytest-cov
    pytest
    tox

;docs =
;    sphinx >= 2.0.0, < 3
;    towncrier >= 18.5.0
;    pygments-github-lexers >= 0.0.5
;    sphinxcontrib-autoprogram >= 0.1.5

[bdist_wheel]
universal = 1